style - 클래스 및 변수명 변경 (job -> task)